# code-chrono

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  integrations.rs  lib.rs  main.rs
src-tauri/src/commands/: data.rs  mod.rs  notifications.rs  programs.rs  projects.rs  settings.rs  stats.rs  sync.rs  tags.rs  tasks.rs  timer.rs
src-tauri/src/database/: mod.rs  models.rs  programs.rs  projects.rs  sessions.rs  settings.rs  tags.rs  tasks.rs
src/lib/components/: AboutDialog.svelte  DatePicker.svelte  Dropdown.svelte  Header.svelte  Icons.svelte  ProgramNotificationModal.svelte  QuickAdd.svelte  Sidebar.svelte  TaskItem.svelte  TaskList.svelte  ThemeToggle.svelte  TimerCard.svelte  UpdateChecker.svelte
src/lib/components/calendar/: CalendarCell.svelte  CalendarGrid.svelte  CalendarHeader.svelte
src/lib/components/integrations/: SyncDrawerFooter.svelte  SyncDrawerHeader.svelte  SyncFilterBar.svelte  SyncIssueList.svelte  syncTypes.ts  (+1 more)
src/lib/i18n/: store.ts
src/lib/stores/: currentTask.ts  idle.ts  tasks.ts  templates.ts  theme.ts  timer.ts  timerSettings.ts
src/lib/types/: index.ts
src/lib/utils/: format.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/calendar/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
(+29 files in other folders)
