[package]
name = "code-chrono"
version = "0.1.0"
description = "Code chrono, track yourself so you can be better"
authors = ["Pedro Capela"]
edition = "2021"

[lib]
name = "code_chrono_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
